<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity">

    <TextView
        android:id="@+id/tv_jenis_peraturan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/jenis_peraturan"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jenis_peraturan">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_pp"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_200"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/perpu"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_bank" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/peraturan_pusat"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_pm"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_200"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/permen"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_chart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/peraturan_menteri"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="13sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_lpnk"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_200"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/perlpnk"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_list" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/peraturan_lpnk"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_pd"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_200"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/perda"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_management" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/peraturan_daerah"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="13sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_penjelasan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/penjelasan"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_penjelasan">

        <FrameLayout
            android:id="@+id/fl_info_pp"
            android:layout_width="395dp"
            android:layout_height="43dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="25dp"
            android:background="@color/grey_200">

            <TextView
                android:id="@+id/tv_info_pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/info_peraturan_pusat"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_info_pm"
            android:layout_width="395dp"
            android:layout_height="43dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="25dp"
            android:background="@color/grey_200">

            <TextView
                android:id="@+id/tv_info_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/info_peraturan_menteri"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_info_lpnk"
            android:layout_width="395dp"
            android:layout_height="43dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="25dp"
            android:background="@color/grey_200">

            <TextView
                android:id="@+id/tv_info_lpnk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/info_peraturan_LPNK"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_info_pd"
            android:layout_width="395dp"
            android:layout_height="43dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="25dp"
            android:background="@color/grey_200">

            <TextView
                android:id="@+id/tv_info_pd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/info_peraturan_daerah"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </FrameLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/chatbot"
        android:layout_width="88dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/ic_chatbot"
        android:contentDescription="@string/chatbot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>